<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.walidhelaoui.resetandroidapp.Fragments.Quiz.SmokingQuiz.QuizS1Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundlight">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/monokuma"/>

        <LinearLayout
            android:id="@+id/contenuQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question"
                android:textSize="25sp"
                android:textColor="#332d2d"
                android:gravity="center"
                android:text="@string/how_soon_after_waking_do_you_smoke_your_first_cigarette"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/reponse1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/within_5_minutes" />
            <Button
                android:id="@+id/reponse2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:text="@string/_5_30_minutes"/>
            <Button
                android:id="@+id/reponse3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:text="@string/_31_60_minutes"/>
        </LinearLayout>


    </RelativeLayout>

</FrameLayout>
