<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esprit.reset.Fragments.Quiz.SmokingQuiz.QuizS5Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundlight">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/kuma4"
            android:src="@drawable/monokuma"/>

        <LinearLayout
            android:id="@+id/contenuQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/question"
                android:textSize="25sp"
                android:gravity="center"
                android:textColor="#332d2d"
                android:text="@string/do_you_smoke_more_frequently_in_the_morning"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/q6_reponse1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:text="@string/yes"/>
            <Button
                android:id="@+id/q6_reponse2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:text="@string/non"/>
        </LinearLayout>

    </RelativeLayout>
</FrameLayout>
